tests/ui/layout/unknown-when-no-type-parameter.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/unknown-when-no-type-parameter.rs:11:10
   |
LL |     [(); size_of::<<() as Project>::Assoc>()];
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the type `<() as Project>::Assoc` has an unknown layout
   |
note: the evaluated program failed inside `std::mem::size_of::<<() as Project>::Assoc>`
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL
   |
   = note: the evaluated program failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
